# BF-Lang_C

./: .travis.yml  CMakeLists.txt  README.md  brainfuck_c.c  brainfuck_utils.c  brainfuck_utils.h  cells.c  cells.h
brainfuck_examples/: bf2.bf  e.bf  fibonacci.bf  quine.bf  rot13.bf  rot13_2.bf  rule30_gen.bf  sequence.bf  sier_triang.bf  test.bf  thue-morse.bf
headers/: brainfuck_utils.h
src/: brainfuck_c.c  brainfuck_utils.c
tests/: cell_test.c
